fix(metrics): immutable product_ids filter copy (SpotBugs EI)
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>